@@ -81,6 +81,10 @@
 			<PackageName>jdk8-openjdk</PackageName>
 		</Package>
 		<Package>
+			<GenericName>maven</GenericName>
+			<PackageName>maven</PackageName>
+		</Package>
+		<Package>
 			<GenericName>portaudio-development</GenericName>
 			<PackageName>portaudio</PackageName>
 		</Package>
