@@ -24,6 +24,10 @@
 			<PackageName>java/openjdk8</PackageName>
 		</Package>
 		<Package>
+			<GenericName>maven</GenericName>
+			<PackageName>maven</PackageName>
+		</Package>
+		<Package>
 			<GenericName>libpng-development</GenericName>
 			<PackageName>png</PackageName>
 		</Package>
