@@ -69,6 +69,10 @@
 			<PackageName>openjdk8</PackageName>
 		</Package>
 		<Package>
+			<GenericName>maven</GenericName>
+			<PackageName>maven</PackageName>
+		</Package>
+		<Package>
 			<GenericName>portaudio-development</GenericName>
 			<PackageName>portaudio</PackageName>
 		</Package>
