@@ -6,6 +6,7 @@ pts-core: Improve command documentation categories/organization
 pts-core: Fix install time reporting from the info sub-command when passing a test profile
 pts-core: Add network-info sub-command
 pts-core: Java external dependency updates
+pts-core: Add maven external dependency
 phodevi: NVMe disk reporting on BSDs
 pts_Graph: Allow line graphs to have adjustable floor/bottom to better present data on graph
 
